nullaway_error_7AF95DFF-4F57-4843-8292-29C5628CE58F.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/aspectj/annotation/BeanFactoryAspectInstanceFactory.java:84: error: [NullAway] passing @Nullable parameter 'resolvedType' where @NonNull is required
		this.aspectMetadata = new AspectMetadata(resolvedType, name);
		                                         ^
    (see http://t.uber.com/nullaway )
